manifests/apps/llm-proxy/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier
spec:
  plugin:
    sablier:
      group: llm-proxy
      blocking:
        timeout: 15m
      sablierUrl: http://sablier-sablier.sablier.svc.cluster.local:10000
      sessionDuration: 30m
