manifests/apps/llm-proxy/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: llm-proxy
  labels:
    pod-security.kubernetes.io/enforce: privileged # Required for host networking
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
