manifests/apps/llm-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: llm-proxy
    app.kubernetes.io/name: llm-proxy
  name: llm-proxy
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: llm-proxy
    app.kubernetes.io/name: llm-proxy
  type: ClusterIP
